--- a/css/styles.css
+++ b/css/styles.css
@@ -141,13 +141,21 @@ color: #FFFFFF
     background: #E5E5E5
  }
 
-.section-content-title{
-    font-weight: 700;
-font-size: 36px;
-line-height: 1.17;
-letter-spacing: 0.03em;
+.list{
+    list-style: none;
+}
 
-color: #212121;
+.visuali-hidden{
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
 }
 
  .content-item-title{
@@ -174,10 +182,50 @@ color: #212121;
     background: #E5E5E5;
 }
 
+.list{
+    list-style: none;
+}
+
+.section-work-title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    color: #212121;  
+}
+
 /*-------------team-------------*/
 
 .team{
     background: #F5F4FA;
+}
+
+.section-team-title{
+    font-weight: 700;
+font-size: 36px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+color: #212121;
+}
+
+.team-item{
+    background: #FFFFFF; 
+}
+
+.team-title{
+    font-weight: 500;
+font-size: 16px;
+line-height: 1.18;
+letter-spacing: 0.03em;
+color: #212121;
+}
+
+.team-text{
+    font-weight: 400;
+font-size: 16px;
+line-height: 1.18;
+letter-spacing: 0.03em;
+color: #757575;
 }
 
 /*-------------footer------------*/
