--- a/css/styles.css
+++ b/css/styles.css
@@ -1,152 +1,141 @@
-:root{
+:root {
 
-    --primary-text-color: #212121;
-    --secondary-text-color:  #757575;
-    --primary-white-color: #FFFFFF;
+    --header-bg-color: #FFFFFF;
+    --header-text-color: #212121;
+    --second-hdr-text-color: #2196F3;
+    --main-title-color: #FFFFFF;
+    --second-title-color: #212121;
+    --main-btn-color: #FFFFFF;
+    --main-text-color: #757575;
+    --main-bg-color: #E5E5E5;
+    --second-bg-color: #F5F4FA;
+    --footer-bg-color: #2F303A;
+    --footer-logo-color: #2196F3;
+    --second-logo-color: #FFFFFF;
+    --footer-text-color: #FFFFFF;
+    --second-ft-text-color: color: rgba(255, 255, 255, 0.6);
 }
 
 
-.body {
+body {
     font-family: "Roboto", sans-serif ;
-    font-weight: 400;
     font-size: 14px;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.03em;
     line-height: 1.14;
-
-    color: var (--primary-text-color);
-    background-color: var (--primary-white-color);
-
 }
 
 /*-----------header--------------*/
 
-.header{
-    background-color: #FFFFFF;;
+.header {
+    background-color: var(--header-bg-color);
 }
 
 
-.header-logo{
+.header-logo {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    /* identical to box height */
-    
     letter-spacing: 0.03em;
-    
     color: #000000;  
     text-decoration: none;
 }
 
-.header-logo-color{
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
-/* identical to box height */
-
-letter-spacing: 0.03em;
-
-color: #2196F3;
+.header-logo-color {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--second-hdr-text-color);
 }
 
-.header-list{
+.header-list {
     list-style: none;
     text-decoration: none;
 }
 
 
 
-.header-link-active{   
+.header-link-active {   
     font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
-
-color: #212121;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--header-text-color);
     text-decoration: none;
 }
 
-.header-link-active:hover{
-    color: #2196F3
+.header-link-active:hover {
+    color: var(--second-hdr-text-color)
 }
 
-.header-link{
+.header-link {
 
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    
-    color: #212121;
-text-decoration: none;
+    color: var(--header-text-color);
+    text-decoration: none;
 }
 
-.header-link:hover{
-    color: #2196F3
+.header-link:hover {
+    color: var(--second-hdr-text-color)
 }
 
 
-.contact-item{
+.contact-item {
     list-style: none;
 }
 
  
-.header-mail{
+.header-mail {
     font-weight: 500;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.02em;
-
-color: #757575;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: var(--main-text-color);
     text-decoration: none;
 }
 
-.header-mail:hover{
-    color: #2196F3;  
+.header-mail:hover {
+    color: var(--second-hdr-text-color);  
 }
 
-.header-tel{
+.header-tel {
     font-weight: 500;
-    font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.02em;
-    
-    color: #757575;
-text-decoration: none;
+    color: var(--main-text-color);
+    text-decoration: none;
 }
 
-.header-tel:hover{
-    color: #2196F3;
+.header-tel:hover {
+    color: var(--second-hdr-text-color);
 }
 
 /*------------hero--------*/
 
-.hero{
-    background-color: #2F303A;
+.hero {
+    background-color: var(--footer-bg-color);
 }
 
-.hero-title{
+.hero-title {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    /* or 136% */
-    
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    
-    color: #FFFFFF;
+    color: var(--main-title-color);
 }
 
-.hero-btn{
-    background-color: #2196F3;
+.hero-btn {
+    background-color: var(--second-hdr-text-color);
     ;
 }
 
- .hero-btn{
+ .hero-btn {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -154,21 +143,20 @@ text-decoration: none;
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    
-    color: #FFFFFF
+    color: var(--main-btn-color);
  }
 
 /*----------------content------------*/
 
- .content{
-    background: #E5E5E5
+ .content {
+    background: var(--main-bg-color)
  }
 
-.list{
+.list {
     list-style: none;
 }
 
-.visuali-hidden{
+.visuali-hidden {
     position: absolute;
     white-space: nowrap;
     width: 1px;
@@ -181,33 +169,25 @@ text-decoration: none;
     margin: -1px;
 }
 
- .content-item-title{
+ .content-item-title {
     font-weight: 700;
     letter-spacing: 0.03em;
-    
     color: var (--primary-text-color)
  }
 
-.content-text{
-font-size: 14px;
-line-height: 1.71;
-
-letter-spacing: 0.03em;
-
-color: #757575; 
+.content-text {
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color); 
 }
 
 /*-----------work----------*/
 
-.work{
-    background: #E5E5E5;
+.work {
+    background: var(--main-bg-color);
 }
 
-.list{
-    list-style: none;
-}
-
-.section-work-title{
+.section-work-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -217,80 +197,75 @@ color: #757575;
 
 /*-------------team-------------*/
 
-.team{
-    background: #F5F4FA;
+.team {
+    background: var(--second-bg-color);
 }
 
-.section-team-title{
+.section-team-title {
     font-weight: 700;
-font-size: 36px;
-line-height: 1.17;
-letter-spacing: 0.03em;
-color: var (--primary-text-color)
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    color: var (--primary-text-color)
 }
 
-.team-item{
-    background: #FFFFFF; 
+.team-item {
+    background: var(--main-title-color); 
 }
 
-.team-title{
+.team-title {
     font-weight: 500;
-font-size: 16px;
-line-height: 1.18;
-letter-spacing: 0.03em;
-color: var (--primary-text-color)
+    font-size: 16px;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+    color: var(--second-title-color)
 }
 
-.team-text{
-font-size: 16px;
-line-height: 1.18;
-letter-spacing: 0.03em;
-color: var (--secondary-text-color)
+.team-text {
+    font-size: 16px;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color)
 }
 
 /*-------------footer------------*/
 
 
-.footer{
-    background: #2F303A;  
+.footer {
+    background: var(--footer-bg-color);  
 }
 
-.footer-logo{
+.footer-logo {
     font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
-
-letter-spacing: 0.03em;
-
-color: var (--primary-white-color)
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+    color: var(--second-logo-color)
 }
 
-.footer-logo-color{
-    color: #2196F3;
+.footer-logo-color {
+    color: var(--footer-logo-color);
 }
 
-.footer-item{
+.footer-item {
     list-style: none;
 }
 
-.footer-text-addres{
-    font-size: 14px;
+.footer-text-addres {
     line-height: 1.71;   
     letter-spacing: 0.03em;
-    
-    color: #FFFFFF   
+    color: var(--footer-text-color);  
 }
 
-.footer-text{
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-
-color: rgba(255, 255, 255, 0.6);
+.footer-text {
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--second-ft-text-color);
 }
 
-.footer-text{
+.footer-text {
     text-decoration: none;
 }
