--- a/css/normalize.css
+++ b/css/normalize.css
@@ -7,27 +7,36 @@
 }
 .button-secondary {
     font-size: 16px;
-line-height: 1.62;
-text-align: center;
-letter-spacing: 0.03em;
-color: #212121;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
 }
+
+.button-secondary:hover,
+.button-secondary:focus{
+    background-color: #2196F3;
+}
+
 .icon-list{
     list-style: none;
 }
+
 .link{
     text-decoration: none;
 }
+
 .portfolio-sample {
     font-weight: 700;
-font-size: 18px;
-line-height: 2.0;
-letter-spacing: 0.06em;
-color: #212121;
+    font-size: 18px;
+    line-height: 2.0;
+    letter-spacing: 0.06em;
+    color: #212121;
 }
+
 .portfolio-info {
     font-size: 16px;
-line-height: 1.88;
-letter-spacing: 0.03em;
-color: #757575;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: #757575;
 }
