--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
     font-size: 14px;
     letter-spacing: 0.03em;
     line-height: 1.14;
+    background-color: var(--main-title-color);
 }
 
 /*-----------header--------------*/
@@ -171,6 +172,8 @@ body {
 
  .content-item-title {
     font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
     letter-spacing: 0.03em;
     color: var(--second-title-color)
  }
@@ -268,4 +271,5 @@ body {
 
 .footer-text {
     text-decoration: none;
+    color: rgba(255, 255, 255, 0.6);
 }
